--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://filipe-tti.github.io/site-trico" ,
+  "homepage": "https://filipe-tti.github.io/site-trico",
   "name": "vite-react-tailwind",
   "version": "1.0.0",
   "type": "module",
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.0",
     "gh-pages": "^6.3.0",
